# robot-car

./: ir_codes.txt
initial_code/: backup_firmware.sh  original_arduino_flash_20210207_14h46.hex  original_arduino_flash_20210207_14h46.hex.sha256
initial_code/sdk/Smart robot car comprehensive_Experiment/Comprehensive_Experiment/: Comprehensive_Experiment.ino
initial_code/sdk/Smart robot car single functional experiment/1 Smart robot car comprehensive experiment on all sides/comprehensive_experiment_on_all_sides/: comprehensive_experiment_on_all_sides.ino
initial_code/sdk/Smart robot car single functional experiment/2 Smart robot car specify fancy moves/specify_fancy_moves/: specify_fancy_moves.ino
initial_code/sdk/Smart robot car single functional experiment/4 Smart robot car black tracking experiment/black_line_Walking_experiment/: black_line_Walking_experiment.ino
initial_code/sdk/Smart robot car single functional experiment/5 Smart robot car Remote_contorl/Remote_contorl/: Remote_contorl.ino
initial_code/sdk/Smart robot car single functional experiment/6.2 Smart robot car infrared Follow object experiment/infrared_and_obstacle_experiment/: infrared_and_obstacle_experiment.ino
initial_code/sdk/Test IR_remote_code_values/Test_IR_remote_code_values/: Test_IR_remote_code_values.ino
rust/: Cargo.toml  README.md  avr-atmega328p.json  uno-runner.sh
rust/.cargo/: config.toml
rust/spot/: Cargo.toml
rust/spot/src/: main.rs
